Add book genre API endpoints
https://github.com/JonathanGWesterfield/Librarian/pull/43
